--- a/Mini-Protofolio/index.html
+++ b/Mini-Protofolio/index.html
@@ -45,7 +45,7 @@
       </div>
     </section>
     <section class="cta">
-      <a href="C:\Users\manik\Downloads\ResumeN.pdf" download>
+      <a href="C:\Users\manik\Downloads\Resume.pdf" download>
         <button class="btn download-btn">Download Resume</button>
       </a>
       <a href="mailto:manikyammanuthakk@gmail.com">
